<resources>
    <string name="app_name">SMGProyect</string>
    <string name="smartgreenhouse">SmartGreenHouse</string>
    <string name="soluciones_para_tu_invernadero">Soluciones para tu invernadero</string>
    <string name="ingresar">Ingresar</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="title_activity_intro_menu">SmartGreenHouser</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="bgbackgroundimage">bgBackgroundImage</string>
    <string name="reportlabel">Reportes</string>
    <string name="indicatorlabel">Indicadores</string>
    <string name="bgindicators">bgindicators</string>
    <string name="bgreports">bgreports</string>
    <string name="title_activity_indicator_menu">indicatorMenu</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="indicatormedium">Medio</string>
    <string name="indicatorlow">Bajo</string>
    <string name="titlehs">Humedad del Suelo</string>
    <string name="titletemp">Temperatura</string>
    <string name="indicatorgood">Optimo</string>
    <string name="titlelight">Nivel de Luz</string>
    <string name="indicatorbad">Crítico</string>
    <string name="titlehr">Humedad ambiental</string>
    <string name="btnback">Volver</string>
    <string name="btnimport">Importar indicadores</string>
    <string name="titlepanel">INDICADORES</string>
    <string name="descpanel">Selecciona tu medición</string>
    <string name="interfaceAdminUsers">AdminUsers</string>
    <string name="interfaceAdminRegistry">AdminRegistry</string>
    <string name="registro_hist_rico">Registro Histórico</string>
    <string name="detalle_humedad_del_suelo">Detalle Humedad del suelo</string>
    <string name="_20">20</string>
    <string name="lista_de_usuarios">Lista de usuarios</string>
    <string name="crear_usuario">Crear Usuario</string>
    <string name="apellido">Apellido</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="nombre">Nombre</string>
    <string name="repetir_contrase_a">Repetir contraseña</string>
    <string name="editar_usuario">Editar Usuario</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="humedad_relativa">Humedad Relativa</string>
    <string name="detalle_humedad_relativa">Detalle Humedad Relativa</string>
    <string name="nivel_de_luz">Nivel de Luz</string>
    <string name="detalle_nivel_de_luz">Detalle Nivel de Luz</string>
    <string name="temperatura">Temperatura</string>
    <string name="detalle_temperatura_ambiental">Detalle Temperatura Ambiental</string>
    <string name="error_user">Usuario no encontrado</string>
    <string name="success_user">Bienvenido %1s</string>
    <string name="no_data_available">No data available</string>
    <string name="title_indicators_customization">Edición de indicadores</string>
    <string name="date_registry">Fecha medición</string>
    <string name="value_registry">Valor</string>
</resources>
